Update product description for T-shirt

--- a/Experiment-10.html
+++ b/Experiment-10.html
@@ -13,7 +13,7 @@
         <img src="download.jpeg" alt="T-shirt">
         <div class="name">Classic Cotton T-Shirt</div>
         
-        <div class="desc">Soft, breathable cotton. Regular fit. Available in multiple colors.</div>
+        <div class="desc">Soft, breathable cotton. slim fit. Available in multiple colors.</div>
         <div class="price">₹799 <span class="oldprice">₹1,499</span></div>
         <button>Add to Cart</button>
     </div>
