Update department name in Experiment-01.html

--- a/Experiment-01.html
+++ b/Experiment-01.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Heading -->
     <h1 align="center">Course Curriculum</h1>
-    <p align="center"><b>Department of Computer Science</b></p>
+    <p align="center"><b>Department of Electonics and Communnication</b></p>
     <hr>
     <!-- Introduction -->
     <h2>Introduction</h2>
