--- a/Experiment-02.html
+++ b/Experiment-02.html
@@ -15,7 +15,7 @@
         <a href="#world">World</a> |
         <a href="#sports">Sports</a> |
         <a href="#entertainment">Entertainment</a> |
-        <a href="#podcast">Podcast</a> |
+        <a href="#podcast">Podcasts</a> |
         <a href="#contact">Contact</a>
     </p>
     <hr>
