--- a/Experiment-03.html
+++ b/Experiment-03.html
@@ -7,7 +7,7 @@
 
 <body>
     <table border="1" align="center" cellpadding="8" cellspacing="0">
-        <caption>College Timetable - CSE Department</caption>
+        <caption>College Timetable - ECE Department</caption>
         <tr>
             <th>Day / Time</th>
             <th>9:00 - 10:00</th>
