--- a/Experiment-04.html
+++ b/Experiment-04.html
@@ -20,7 +20,7 @@
         <br> 
         <br> 
  
-        <label for="phone">Phone: </label> 
+        <label for="phone">Phone No.: </label> 
         <input type="tel" name="phone" id="phone"> 
         <br> 
         <br> 
