Change gender option label from 'Other' to 'Others'

--- a/Experiment-05.html
+++ b/Experiment-05.html
@@ -21,7 +21,7 @@
         <label for="gender">Gender:</label>
         <input type="radio" id="gender" name="gender" value="Male" required>Male
         <input type="radio" id="gender" name="gender" value="Female" required>Female
-        <input type="radio" id="gender" name="gender" value="Other" required>Other
+        <input type="radio" id="gender" name="gender" value="Other" required>Others
         <br><br>
         <label for="course">Course:</label>
         <select id="course" name="course" required>
