Update education info for Asha Rani

--- a/Experiment-08.html
+++ b/Experiment-08.html
@@ -23,7 +23,7 @@
             <div class="circle">AR</div>
             <div class="details">
                 <p class="name">Asha Rani</p>
-                <p class="info">B.Tech - IT</p>
+                <p class="info">B.Tech - CSE(AIML)</p>
                 <p class="info">Roll No: 21IT1012</p>
                 <p class="info">1st Year</p>
             </div>
