Update member name from Asha Rani to Asha Ghosle

--- a/Experiment-08.html
+++ b/Experiment-08.html
@@ -22,7 +22,7 @@
         <div class="member-card">
             <div class="circle">AR</div>
             <div class="details">
-                <p class="name">Asha Rani</p>
+                <p class="name">Asha Ghosle</p>
                 <p class="info">B.Tech - CSE(AIML)</p>
                 <p class="info">Roll No: 21IT1012</p>
                 <p class="info">1st Year</p>
