--- a/Experiment-01.html
+++ b/Experiment-01.html
@@ -21,13 +21,13 @@
     <ol>
         <li>Mathematics I</li>
         <li>Computer Fundamentals</li>
-        <li>Programming in C</li>
+        <li>Programming in C++</li>
         <li>Electronics Basics</li>
     </ol>
     <!-- Unordered List -->
     <h2>Programming Languages (Unordered List)</h2>
     <ul>
-        <li>C</li>
+        <li>C++</li>
         <li>Java</li>
         <li>Python</li>
         <li>JavaScript</li>
@@ -35,8 +35,8 @@
     <!-- Description List -->
     <h2>Course Description (Description List)</h2>
     <dl>
-        <dt><b>C Programming</b></dt>
-        <dd>Learn basics of C language including loops, arrays, and functions.</dd>
+        <dt><b>C++ Programming</b></dt>
+        <dd>Learn basics of C++ language including loops, arrays, and functions.</dd>
         <dt><b>Java</b></dt>
         <dd>Introduction to Object-Oriented Programming concepts.</dd>
     </dl>
